grammar.js
    source_file: $ => optional(seq(
      optional($._terminator),
      sep1($._terminator, $._block_form),
      optional($._terminator)
    )),

    block: $ => seq(
      sep1($._terminator, $._block_form),
      optional($._terminator)
    ),

    _block_form: $ => choice(
      $._expression,
      $.assignment,
      $.open_tuple,
    ),

    _bracket_form: $ => choice(
      $._expression,
      alias($._closed_assignment, $.assignment),
    ),

    open_tuple: $ => prec(PREC.tuple, choice(
      seq($._expression, repeat1(seq(',', $._expression)), optional(',')),  // x, y [, z ...] [,]
      seq($._expression, ','),  // x,  (trailing comma destructuring)
    )),

    // assignments inside blocks
    assignment: $ => prec.right(PREC.assign, seq(
      choice(
        $._primary_expression,
        $.open_tuple,
        $._operation,
        $.operator,
      ),
      alias('=', $.operator),
      $._block_form,
    )),

    // assignments inside brackets
    _expression: $ => choice(
      $._definition,
      $._statement,
      $._primary_expression,
      $._operation,
      $.compound_assignment_expression,
      $.macrocall_expression,
      $.arrow_function_expression,
      $.juxtaposition_expression,
      $.ternary_expression,
      $.operator,
      $.integer_literal,
      $.float_literal,
    ),

    // Definitions

    type_head: $ => prec(PREC.stmt, choice(
      $._primary_expression,
      $.binary_expression,
      $.where_expression, // struct Foo{T} <: Bar where {T} end
    )),

    struct_definition: $ => seq(
      optional('mutable'),
      'struct',
      $.type_head,
      optional($._terminator),
      optional($.block),
      'end',
    ),

    signature: $ => prec(PREC.stmt, choice(
      $.identifier, // zero-method definition
      $.var_identifier, // var"..." zero-method definition
      $.call_expression,
      alias($.tuple_expression, $.argument_list), // anonymous function
      $.typed_expression,
      $.where_expression,
    )),

    function_definition: $ => seq(
      'function',
      $.signature,
      optional($._terminator),
      optional($.block),
      'end',
    ),

    compound_statement: $ => seq('begin', optional($._terminator), optional($.block), 'end'),

    _importable: $ => choice(
      $._exportable,
      alias($._scoped_identifier, $.import_path),
      $.import_path,
    ),

    _import_list: $ => prec.right(sep1(',', choice(
      $._importable,
      $.import_alias,
    ))),

    selected_import: $ => seq(
      $._importable,
      token.immediate(':'),
      $._import_list,
    ),

    using_statement: $ => seq(
      'using',
      choice(
        $._import_list,
        $.selected_import,
      ),
    ),

    // Primary expressions can be called, indexed, accessed, and type parametrized.
    _primary_expression: $ => choice(
      $.identifier,
      $.boolean_literal,
      $.curly_expression, // Only valid in macros
      $.parenthesized_expression,
      $.tuple_expression,
      $._array,
      $._string,
      $.adjoint_expression,
      $.broadcast_call_expression,
      $.call_expression,
      alias($._closed_macrocall_expression, $.macrocall_expression),
      $.parametrized_type_expression,
      $.field_expression,
      $.index_expression,
      $.interpolation_expression,
      $.quote_expression,
      prec(-1, alias('public', $.identifier)), // Julia 1.11: contextual keyword
      prec(-1, alias('primitive', $.identifier)), // contextual: only keyword in `primitive type`
      prec(-1, alias('abstract', $.identifier)),  // contextual: only keyword in `abstract type`
      prec(-1, alias('mutable', $.identifier)),   // contextual: only keyword in `mutable struct`
      alias($._begin_identifier, $.identifier),    // begin as identifier via external scanner (a[begin+1:end])
      alias($._emoji_identifier, $.identifier),    // SMP emoji identifiers via external scanner
    ),

    _array: $ => choice(
      $.comprehension_expression,
      $.matrix_expression,
      $.vector_expression,
    ),

    vector_expression: $ => choice(
      // Vector with parameters: comma-separated elements, then ; params
      // [a, b; c] → vect(a, b, parameters(c))
      // [a, b; c; d] → vect(a, b, parameters(c, d))
      // Requires at least one comma before first ; (otherwise it's vcat/matrix).
      // Used by JuMP: @variable(model, x[i=1:3, j=1:3; isodd(i); iseven(j)])
      seq(
        '[',
        $._bracket_form,
        repeat1(seq(',', $._bracket_form)),
        repeat1(seq($._semicolon, sep(',', $._bracket_form))),
        ']',
      ),
      // Regular vector: comma-separated
      seq(
        '[',
        sep(',', $._bracket_form),
        optional(','),
        ']',
      ),
    ),

    parenthesized_expression: $ => prec.dynamic(1, parenthesize(
      sep1($._semicolon, choice(
        $._bracket_form,
        $.generator,
      )),
      optional($._semicolon),
    )),

    tuple_expression: $ => parenthesize(
      optional($._semicolon),
      sep(choice(',', $._semicolon), choice(
        $._bracket_form,
        $.generator,
      )),
      optional(choice(',', $._semicolon)),
    ),

    curly_expression: $ => choice(
      seq(
        '{',
        sep(',', $._bracket_form),
        optional(','),
        '}',
      ),
      // bracescat: space/semicolon-separated {x y}, {a ;; b}
      prec(PREC.array, seq(
        '{',
        choice(
          seq(
            $.matrix_row,
            repeat(seq($._terminator, $.matrix_row)),
            optional($._terminator),
          ),
          $._semicolon,
        ),
        '}',
      )),
    ),

    adjoint_expression: $ => seq(
      $._primary_expression,
      token.immediate('\''),
    ),

    field_expression: $ => prec(PREC.dot, seq(
      field('value', $._primary_expression),
      token.immediate('.'),
      choice(
        $.identifier,
        alias($._emoji_identifier, $.identifier), // sys.😄
        $.interpolation_expression,
        $.quote_expression,
        $._string,
        alias('?', $.identifier), // x.? (getproperty with ?)
      ),
    )),

    index_expression: $ => seq(
      $._primary_expression,
      $._immediate_bracket,
      $._array,
    ),

    parametrized_type_expression: $ => seq(
      $._primary_expression,
      $._immediate_brace,
      $.curly_expression,
    ),

    call_expression: $ => seq(
      choice($._primary_expression, $.operator),
      $._immediate_paren,
      alias($.tuple_expression, $.argument_list),
      optional($.do_clause),
    ),

    _macro_head: $ => choice(
      alias($._qualified_macro_identifier, $.field_expression),
      $.macro_identifier,
    ),

    macrocall_expression: $ => prec.right(seq($._macro_head, optional($.macro_argument_list))),

    macro_argument_list: $ => prec.left(repeat1(prec(PREC.macro_arg, $._block_form))),

    do_clause: $ => seq(
      'do',
      sep(',', $._bracket_form),
      $._terminator,
      optional($.block),
      'end',
    ),

    interpolation_expression: $ => prec.right(PREC.prefix, seq(
      '$',
      choice(
        $.interpolation_expression, // $$x = $($x) nested interpolation
        $.integer_literal,
        $.float_literal,
        $.identifier,
        $.curly_expression,
        $.parenthesized_expression,
        $.tuple_expression,
        $._array,
        $._string,
      ),
    )),

    quote_expression: $ => prec.right(PREC.prefix, seq(
      ':',
      choice(
        $.integer_literal,
        $.float_literal,
        $._string,
        $.identifier,
        alias($._emoji_identifier, $.identifier), // :👍
        $.operator,
        seq($._immediate_brace, $.curly_expression),
        seq($._immediate_bracket, $._array),
        seq($._immediate_paren, choice(
          $.parenthesized_expression,
          $.tuple_expression,
          // Syntactic operators in parentheses
          parenthesize(
            alias(
              choice(
                '::', ':=', '.=', '=',
                $._assignment_operator,
                $._lazy_or_operator,
                $._lazy_and_operator,
                $._syntactic_operator,
              ),
              $.operator,
            ),
          ),
        )),
        // Syntactic operators without parentheses
        alias(
          choice(
            $._assignment_operator,
            $._lazy_or_operator,
            $._lazy_and_operator,
            $._syntactic_operator,
          ),
          $.operator,
        ),
        alias(token.immediate(KEYWORDS), $.identifier),
      ),
    )),


    // Operations

    _operation: $ => choice(
      $.unary_expression,
      $.binary_expression,
      $.range_expression,
      $.splat_expression,
      $.typed_expression,
      $.unary_typed_expression,
      $.where_expression,
    ),

    binary_expression: $ => {
      const table = [
        // ~ has same precedence as = in Julia (both 1), but must be above
        // PREC.array (-1) so that [0 ~ expr, ...] parses as vector with
        // binary ~ elements rather than matrix with unary ~ elements.
        // Uses external scanner _binary_tilde for whitespace sensitivity:
        // `a ~ b` and `a~b` are binary, `a ~b` is unary (Julia's rule).
        [prec.right, 0, $._binary_tilde],
        [prec.right, PREC.pair, $._pair_operator],
        [prec.right, PREC.arrow, $._arrow_operator],
        [prec.left, PREC.lazy_or, $._lazy_or_operator],
        [prec.left, PREC.lazy_and, $._lazy_and_operator],
        [prec.left, PREC.comparison, choice('in', 'isa', $._comparison_operator, $._type_order_operator)],
        [prec.right, PREC.pipe_left, $._pipe_left_operator],
        [prec.left, PREC.pipe_right, $._pipe_right_operator],
        [prec.left, PREC.colon, $._ellipsis_operator],
        [prec.left, PREC.plus, choice($._unary_plus_operator, $._plus_operator)],
        [prec.left, PREC.times, $._times_operator],
        [prec.left, PREC.rational, $._rational_operator],
        [prec.left, PREC.bitshift, $._bitshift_operator],
        [prec.left, PREC.power, $._power_operator],
      ];

      return choice(...table.map(([fn, prec, op]) => fn(prec, seq(
        $._expression,
        alias(op, $.operator),
        $._expression,
      ))));
    },

    unary_expression: $ => prec.right(PREC.prefix, seq(
      alias(choice(
        $._tilde_operator,
        $._type_order_operator,
        $._unary_operator,
        $._unary_plus_operator,
      ), $.operator),
      $._expression,
    )),

    splat_expression: $ => prec(PREC.colon, seq($._expression, '...')),

    arrow_function_expression: $ => prec.right(PREC.afunc, seq(
      choice(
        $.identifier,
        alias($.tuple_expression, $.argument_list),
        $.typed_expression,
        $.interpolation_expression, // :($c -> $b) in metaprogramming
      ),
      '->',
      $._bracket_form,
    )),

    juxtaposition_expression: $ => prec.left(seq(
      choice(
        $.integer_literal,
        $.float_literal,
        $.adjoint_expression,
        $.parenthesized_expression, // (2//3)x, (2)x
        $._array,                   // [1,2]u"cm", [1.0]x
      ),
      $._primary_expression,
    )),

    compound_assignment_expression: $ => prec.right(PREC.assign, seq(
      $._primary_expression,
      alias($._assignment_operator, $.operator),
      $._expression,
    )),

    macro_identifier: $ => seq('@', choice(
      $.identifier,
      $.operator,
      alias($._syntactic_operator, $.operator),
      alias($._scoped_identifier, $.field_expression),
      $.var_identifier, // @var"..."
    )),

    _scoped_identifier: $ => seq(
      choice($.identifier, $.interpolation_expression),
      repeat1(
        seq(
          token.immediate('.'),
          choice(
            $.identifier,
            $.interpolation_expression,
            $.quote_expression,                             // A.:+
            $.operator,                                      // A.==, A.⋆
            parenthesize(choice($._exportable, $.quote_expression)), // A.(:+)
          ),
        ),
      ),
    ),

    _word_identifier: _ => {
      const nonIdentifierCharacters = [
        '#',
        '$',
        ',',
        ':',
        ';',
        '@',
        '~',
        '(', ')',
        '{', '}',
        ...Object.values(OPERATORS),
      ].join(' ')
        .trim()
        .replace(/!/g, '')
        .replace(/-/g, '')
        .replace(/\\/g, '\\\\')
        .replace(/\s+/g, '');

      // Sm (Math Symbol) characters valid as identifier start in Julia.
      // From jl_id_start_char() in julia_extensions.c.
      const validSmSymbols = [
        '°',
        '∀-∇',       // U+2200-U+2207
        '∎-∑',       // U+220E-U+2211
        '∞-∟',       // U+221E-U+221F
        '∫-∳',       // U+222B-U+2233
        '⅀-⅄',       // U+2140-U+2144
        '∿',         // U+223F
        '⊤-⊥',       // U+22A4-U+22A5
        '⊾-⊿',       // U+22BE-U+22BF
        '⋀-⋃',       // U+22C0-U+22C3
        '◸-◿',       // U+25F8-U+25FF
        '∠-∢',       // U+2220-U+2222
        '♯',         // U+266F
        '℘',         // U+2118
        '℮',         // U+212E
      ].join('');

      // So (Other Symbol) ranges safe for identifiers.
      // Only BMP ranges — SMP emoji (U+1F000+) needs external scanner
      // because JS RegExp without 'u' flag can't handle supplementary plane.
      // BMP So ranges: selective Misc Technical + Misc Symbols + Dingbats.
      // Full U+2300-U+23FF breaks token.immediate(KEYWORDS) for :where/:in.
      // U+2310-U+231B covers ⌐ through ⌛ (hourglass) safely.
      const soSymbols = '\\u2310-\\u231B\\u2600-\\u266E\\u2670-\\u27BF';

      // Sc (Currency Symbol) covers €, £, ¥, ₹, ₿, etc.
      // Exclude $ (U+0024) from Sc — it's the interpolation operator, not an identifier.
      const start = `[_\\p{XID_Start}\\p{Sc}${soSymbols}${validSmSymbols}&&[^0-9#*$]]`;
      const rest = `[^"'\`\\s\\.\\-\\[\\]${nonIdentifierCharacters}]*`;
      return new RegExp(start + rest);
    },

    identifier: $ => $._word_identifier,

    // Literals

    boolean_literal: _ => choice('true', 'false'),

    integer_literal: _ => choice(
      token(seq('0b', numeral('01'))),
      token(seq('0o', numeral('0-7'))),
      token(seq('0x', numeral('0-9a-fA-F'))),
      numeral('0-9'),
    ),

    float_literal: _ => {
      const dec = numeral('0-9');
      const hex = numeral('0-9a-fA-F');
      const exponent = /[eEf][+-]?\d+/;
      const hex_exponent = /p[+-]?\d+/;

      const leading_period = token(seq(
        '.',
        dec,
        optional(exponent),
      ));

      // This has to be split into two tokens to avoid conflicts with ellipsis
      const trailing_period = seq(
        dec,
        token.immediate(seq(
          '.',
          optional(dec),
          optional(exponent),
        )),
      );

      const just_exponent = token(seq(dec, exponent));

      const hex_float = token(seq(
        choice(
          seq('0x', hex, optional('.'), optional(hex)),
          seq('0x.', hex),
        ),
        hex_exponent,
      ));

      return choice(leading_period, trailing_period, just_exponent, hex_float);
    },

    _string: $ => choice(
      $.character_literal,
      $.string_literal,
      $.command_literal,
      $.prefixed_string_literal,
      $.prefixed_command_literal,
    ),

    escape_sequence: _ => ESCAPE_SEQUENCE,

    character_literal: _ => token(seq(
      '\'',
      choice(
        /[^'\\]/,
        ESCAPE_SEQUENCE,
      ),
      '\'',
    )),

    _delimiter_str_1: _ => '"',
    _delimiter_str_3: _ => '"""',
    _delimiter_cmd_1: _ => '`',
    _delimiter_cmd_3: _ => '```',

    _string_macro_suffix: $ => choice(
      $.identifier,
      alias(KEYWORDS, $.identifier),
      $.integer_literal,
      $.float_literal,
    ),

    string_interpolation: $ => seq(
      '$',
      choice(
        $.identifier,
        seq($._immediate_paren, parenthesize($._bracket_form)),
      ),
    ),
